--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Site Café</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata">
     <link rel="stylesheet" href="/assets/css/style.css">
-    <link rel="stylesheet" href="/assets/css/reset.css"/>
+    <link rel="stylesheet" href="assets/css/reset.css"/>
 
 </head>
 
