--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
        <section class="section">
         <div id="about-the-cafe" >
             <div class="content" id="about-content">
-                <h5 class="jjtitulo">ABOUT THE CAFE</h5>
+                <div id = "jjtitulo-div">
+                    <h5 class="jjtitulo">ABOUT THE CAFE</h5>
+                </div>
+               
                 <p class="jjtext1">The Cafe was founded in blabla by Mr. Smith in lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 <p class="jjtext1">In addition to our full espresso and brew bar menu, we serve fresh made-to-order breakfast and lunch sandwiches, as well as a selection of sides and salads and other good stuff. </p>
                 <div class="jjcaixinha">
