--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body>
     <!-- início até fim da imagem-->
     <!-- pedro-->
+    <!-- pedro links-->
     <header>
         <ul class="navigation">
             <li><a href="#home">Home</a></li>
